--- a/style.css
+++ b/style.css
@@ -196,7 +196,7 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 0 100px;
+    margin: 0 20px;
 }
 
 .small-container img{
@@ -211,7 +211,7 @@ body {
 
 .small-container p{
     color: rgb(156 163 175);
-    text-align: center;
+    text-align: justify;
 }
 
 .small-container a{
@@ -255,7 +255,7 @@ h2{
 
 .skill-row{
     width: 50%;
-    margin: 100px auto 100px auto;
+    margin: 100px auto 100px;
     text-align: left;
     line-height: 23px;
 }
@@ -280,5 +280,12 @@ h2{
 
     .github span {
         padding: 0 10px;
+    }
+
+    .skill-row{
+        width: 80%;
+        margin: 100px auto 100px;
+        text-align: left;
+        line-height: 23px;
     }
 }
