--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@300&display=swap');
 
 body {
     margin: 0;
-    background-color: black;
-    font-family: 'Roboto';
+    background-color: #000000;
+    font-family: 'Nunito', sans-serif;
 }
 
 .container{
@@ -21,7 +21,7 @@ body {
     background-size: cover;
     background-position: center;
     background-image: url(https://cdn.ayo.so/6442f41d9b0b17d270d04c6a2616b6f15b8e97ff996b6dbb.webp);
-    height: 40vh;
+    height: 20vh;
 }
 
 .profile-img {
@@ -106,28 +106,30 @@ body {
 
 .social {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
+    position: relative;
+    top: 100px;
 }
 
-.social img {
+.social a{
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border: 1px white solid;
+    padding: 10px;
+    flex-grow: 1;
     height: 25px;
     width: 25px;
-    margin-right: 10px;
+    border-radius: 50%;
+    margin: 0 15px;
+    transition: 0.4s;
 }
 
-.social span {
-    position: relative;
-    display: flex;
-    align-items: center;
-    top: 50px;
-    color: rgb(224 231 255);
-    font-weight: 600;
-    margin-right: 10px
-}
-
-.social a {
-    display: flex;
-    align-items: center;
+.social a:hover{
+    background-color: white;
+    color: #ff4800;
 }
 
 #discord {
@@ -149,6 +151,7 @@ body {
     padding: 7px;
     border-radius: 10px;
     background-color: rgb(33, 33, 33);
+    z-index: 10000;
 }
 
 .copied p img {
@@ -185,11 +188,11 @@ body {
 
 .owner{
     position: relative;
-    top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(109, 249, 156);
+    color: #ffffff;
+    top: 130px;
 }
 
 .owner i{
@@ -201,22 +204,34 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-    margin: 0 20px;
 }
 
 .small-container img{
     margin-top: 50px;
-    width: 150px;
+    width: 250px;
 }
 
 .small-container h2{
     color: white;
+    font-size: 30px;
 }
 
+.intro-section{
+    position: relative;
+    bottom: 52px;
+    padding: 50px;
+    padding-bottom: 200px;
+    background-color: #F58840;
+}
+
+.intro-content{
+    margin: 0 120px;
+}
 
 .small-container p{
-    color: rgb(156 163 175);
-    text-align: justify;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    font-size: 19px;
 }
 
 .small-container a{
@@ -252,24 +267,93 @@ h2{
     text-align: center;
 }
 
-.web-dev{
-    width: 25%;
-    float: right;
-    padding-left: 10px;
+
+
+.skill-parent{
+    position: relative;
+    bottom: 180px;
+    display: flex;
+    justify-content: center;
+    margin: 0 10px;
+    flex-wrap: wrap;
 }
 
-.skill-row{
-    width: 50%;
-    margin: 100px auto 100px auto;
-    text-align: left;
-    line-height: 23px;
+
+.skill-child{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    padding: 30px;
+    height: 90vh;
+    margin: 10px;
+    width: 300px;
+    border: 1px rgb(189, 189, 189) solid;
+    border-radius: 10px;
 }
 
-.coding{
-    width: 25%;
-    float: left;
-    padding-right: 10px;
+li{
+    text-align: center;
+    list-style: none;
 }
+
+.skill-parent:nth-of-type(3){
+    margin-bottom: 100px;
+}
+
+.skill-child img{
+    margin-top: 40px;
+    width: 90px;
+}
+
+.skill-child h3{
+    text-align: center;
+    font-size: 20px;
+    color: #000000;
+    
+}
+
+.skill-child h1{
+    text-align: center;
+    font-size: 20px;
+    color: #ff6600;
+    margin-top: 70px;
+}
+
+.skill-child p{
+    text-align: center;
+}
+
+.footer-parent{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 70vh;
+}
+
+.quote{
+    font-size: 30px;
+    color: white;
+    text-align: center;
+    width: 600px;
+    position: relative;
+    top: 80px;
+    opacity: 0.8;
+}
+
+.footer-child{ 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.footer-parent{
+    position: relative;
+    background-color: #ff6600;
+}
+
+
 
 @media only screen and (max-width: 600px) {
     .github {
@@ -293,4 +377,37 @@ h2{
         text-align: left;
         line-height: 23px;
     }
+
+
+    .intro-content{
+        margin: 0 10px;
+    }
+
+    .quote{
+        font-size: 25px;
+        color: white;
+        text-align: center;
+        width: 340px;
+        position: relative;
+        top: 80px;
+    }
+
+
+    .social a{
+        font-size: 20px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        border: 1px white solid;
+        padding: 10px;
+        flex-grow: 1;
+        height: 20px;
+        width: 20px;
+        border-radius: 50%;
+        margin: 0 10px;
+        transition: 0.4s;
+    }
+
+    
 }
