--- a/style.css
+++ b/style.css
@@ -297,9 +297,7 @@ li{
     list-style: none;
 }
 
-.skill-parent:nth-of-type(3){
-    margin-bottom: 100px;
-}
+
 
 .skill-child img{
     margin-top: 40px;
@@ -407,6 +405,20 @@ li{
         border-radius: 50%;
         margin: 0 10px;
         transition: 0.4s;
+    }
+
+
+    .skill-child{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: white;
+        padding: 30px;
+        height: 60vh;
+        margin: 10px;
+        width: 300px;
+        border: 1px rgb(189, 189, 189) solid;
+        border-radius: 10px;
     }
 
     
